--- a/math_langchain.ipynb
+++ b/math_langchain.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_42027/4093896791.py:4: LangChainDeprecationWarning: The class `Ollama` was deprecated in LangChain 0.3.1 and will be removed in 1.0.0. An updated version of the class exists in the :class:`~langchain-ollama package and should be used instead. To use it run `pip install -U :class:`~langchain-ollama` and import as `from :class:`~langchain_ollama import OllamaLLM``.\n",
+      "/tmp/ipykernel_161669/4093896791.py:4: LangChainDeprecationWarning: The class `Ollama` was deprecated in LangChain 0.3.1 and will be removed in 1.0.0. An updated version of the class exists in the :class:`~langchain-ollama package and should be used instead. To use it run `pip install -U :class:`~langchain-ollama` and import as `from :class:`~langchain_ollama import OllamaLLM``.\n",
       "  llm = Ollama(model=\"phi4:latest\", base_url=\"http://127.0.0.1:11434\")\n"
      ]
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,14 +181,23 @@
     "other_task_prompt = PromptTemplate(\n",
     "    input_variables=[\"question\"],\n",
     "    template=\"This question seems to be about another task. Apply Formula2: {question}\"\n",
-    ")\n"
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_161669/207616203.py:2: LangChainDeprecationWarning: The class `LLMChain` was deprecated in LangChain 0.1.17 and will be removed in 1.0. Use :meth:`~RunnableSequence, e.g., `prompt | llm`` instead.\n",
+      "  house_price_chain = LLMChain(llm=llm, prompt=house_price_prompt)\n"
+     ]
+    }
+   ],
    "source": [
     "# Create LLM chains for each formula\n",
     "house_price_chain = LLMChain(llm=llm, prompt=house_price_prompt)\n",
@@ -197,57 +206,260 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "from_llm_and_prompts",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[18]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Create a router chain that routes based on the question content\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m router_chain = \u001b[43mLLMRouterChain\u001b[49m\u001b[43m.\u001b[49m\u001b[43mfrom_llm_and_prompts\u001b[49m(\n\u001b[32m      3\u001b[39m     llm=llm,  \u001b[38;5;66;03m# or your preferred provider for routing\u001b[39;00m\n\u001b[32m      4\u001b[39m     destination_chains={\n\u001b[32m      5\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mhouse_price\u001b[39m\u001b[33m\"\u001b[39m: house_price_chain,\n\u001b[32m      6\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mother_task\u001b[39m\u001b[33m\"\u001b[39m: other_task_chain,\n\u001b[32m      7\u001b[39m     },\n\u001b[32m      8\u001b[39m     \u001b[38;5;66;03m# default_chain=default_chain  # if applicable\u001b[39;00m\n\u001b[32m      9\u001b[39m \n\u001b[32m     10\u001b[39m )\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Math_LangChain/.venv/lib/python3.12/site-packages/pydantic/_internal/_model_construction.py:264\u001b[39m, in \u001b[36mModelMetaclass.__getattr__\u001b[39m\u001b[34m(self, item)\u001b[39m\n\u001b[32m    262\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m private_attributes \u001b[38;5;129;01mand\u001b[39;00m item \u001b[38;5;129;01min\u001b[39;00m private_attributes:\n\u001b[32m    263\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m private_attributes[item]\n\u001b[32m--> \u001b[39m\u001b[32m264\u001b[39m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(item)\n",
-      "\u001b[31mAttributeError\u001b[39m: from_llm_and_prompts"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Create a router chain that routes based on the question content\n",
-    "router_chain = LLMRouterChain.from_llm_and_prompts(\n",
-    "    llm=llm,  \n",
-    "    destination_chains={\n",
-    "        \"house_price\": house_price_chain,\n",
-    "        \"other_task\": other_task_chain,\n",
-    "    },\n",
-    "    # default_chain=default_chain  # if applicable\n",
-    "    \n",
-    ")\n",
-    "\n"
+    "# from langchain.chains.router import LLMRouterChain\n",
+    "# from langchain.prompts import PromptTemplate\n",
+    "\n",
+    "# # Define a router prompt template that instructs the LLM on how to choose a chain.\n",
+    "# router_prompt = PromptTemplate(\n",
+    "#     input_variables=[\"question\"],\n",
+    "#     template=(\n",
+    "#         \"You are a routing assistant. Given the question below, \"\n",
+    "#         \"if it is about house pricing, reply with 'house_price'. Otherwise, reply with 'other_task'.\\n\"\n",
+    "#         \"Question: {question}\"\n",
+    "#     )\n",
+    "# )\n",
+    "\n",
+    "# # Create the router chain using the supported factory method\n",
+    "# router_chain = LLMRouterChain.from_llm(\n",
+    "#     llm=llm,  # your LLM instance for routing\n",
+    "#     prompt=router_prompt,\n",
+    "#     destination_chains={\n",
+    "#         \"house_price\": house_price_chain,\n",
+    "#         \"other_task\": other_task_chain,\n",
+    "#     }\n",
+    "# )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import json\n",
+    "# from langchain.schema import BaseOutputParser\n",
+    "\n",
+    "# class CustomRouterOutputParser(BaseOutputParser):\n",
+    "#     def parse(self, text: str) -> dict:\n",
+    "#         try:\n",
+    "#             result = json.loads(text)\n",
+    "#             # Ensure the required keys are present\n",
+    "#             if \"destination\" not in result or \"next_inputs\" not in result:\n",
+    "#                 raise ValueError(\"Output JSON is missing required keys.\")\n",
+    "#             return result\n",
+    "#         except json.JSONDecodeError as e:\n",
+    "#             raise ValueError(f\"Could not parse output as JSON: {text}\") from e\n",
+    "\n",
+    "#     @property\n",
+    "#     def _type(self) -> str:\n",
+    "#         return \"custom_router_output_parser\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from langchain.chains.router.llm_router import LLMRouterChain\n",
+    "# from langchain.prompts import PromptTemplate\n",
+    "\n",
+    "# # Instantiate your custom output parser\n",
+    "# router_output_parser = CustomRouterOutputParser()\n",
+    "\n",
+    "# # Define the router prompt with the custom output parser attached\n",
+    "# router_prompt = PromptTemplate(\n",
+    "#     input_variables=[\"question\"],\n",
+    "#     template=(\n",
+    "#         \"You are a routing assistant. Given the question below, \"\n",
+    "#         \"reply with a JSON string that includes the keys 'destination' and 'next_inputs'. \"\n",
+    "#         \"If the question is about house pricing, set 'destination' to 'house_price'. \"\n",
+    "#         \"Otherwise, set it to 'other_task'.\\n\"\n",
+    "#         \"Question: {question}\"\n",
+    "#     ),\n",
+    "#     output_parser=router_output_parser\n",
+    "# )\n",
+    "\n",
+    "# # Create the router chain using your custom prompt\n",
+    "# router_chain = LLMRouterChain.from_llm(\n",
+    "#     llm=llm,  # your LLM instance for routing\n",
+    "#     prompt=router_prompt,\n",
+    "#     destination_chains={\n",
+    "#         \"house_price\": house_price_chain,\n",
+    "#         \"other_task\": other_task_chain,\n",
+    "#     }\n",
+    "# )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from langchain.chains.router.output_parser import RouterOutputParser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from langchain.chains.router.llm_router import LLMRouterChain\n",
+    "# from langchain.prompts import PromptTemplate\n",
+    "# from langchain.output_parsers import RouterOutputParser\n",
+    "\n",
+    "# # Create an output parser for the router chain\n",
+    "# router_output_parser = RouterOutputParser()\n",
+    "\n",
+    "# # Define the router prompt and attach the output parser\n",
+    "# router_prompt = PromptTemplate(\n",
+    "#     input_variables=[\"question\"],\n",
+    "#     template=(\n",
+    "#         \"You are a routing assistant. Given the question below, \"\n",
+    "#         \"reply with a JSON string that includes the keys 'destination' and 'next_inputs'. \"\n",
+    "#         \"If the question is about house pricing, set 'destination' to 'house_price'. \"\n",
+    "#         \"Otherwise, set it to 'other_task'.\\n\"\n",
+    "#         \"Question: {question}\"\n",
+    "#     ),\n",
+    "#     output_parser=router_output_parser\n",
+    "# )\n",
+    "\n",
+    "# # Create the router chain using the updated prompt\n",
+    "# router_chain = LLMRouterChain.from_llm(\n",
+    "#     llm=llm,  # your LLM instance for routing\n",
+    "#     prompt=router_prompt,\n",
+    "#     destination_chains={\n",
+    "#         \"house_price\": house_price_chain,\n",
+    "#         \"other_task\": other_task_chain,\n",
+    "#     }\n",
+    "# )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Create a router chain that routes based on the question content\n",
+    "# router_chain = LLMRouterChain.from_llm_and_prompts(\n",
+    "#     llm=llm,  \n",
+    "#     destination_chains={\n",
+    "#         \"house_price\": house_price_chain,\n",
+    "#         \"other_task\": other_task_chain,\n",
+    "#     },\n",
+    "#     # default_chain=default_chain  # if applicable \n",
+    "# )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import re\n",
+    "from langchain.schema import BaseOutputParser\n",
+    "\n",
+    "def clean_keys(d: dict) -> dict:\n",
+    "    new_d = {}\n",
+    "    for key, value in d.items():\n",
+    "        # Strip whitespace and then remove surrounding quotes if present\n",
+    "        new_key = key.strip()\n",
+    "        if new_key.startswith('\"') and new_key.endswith('\"'):\n",
+    "            new_key = new_key[1:-1]\n",
+    "        if isinstance(value, dict):\n",
+    "            new_d[new_key] = clean_keys(value)\n",
+    "        else:\n",
+    "            new_d[new_key] = value\n",
+    "    return new_d\n",
+    "\n",
+    "class CustomRouterOutputParser(BaseOutputParser):\n",
+    "    def parse(self, text: str) -> dict:\n",
+    "        # Extract the first JSON object from the text using regex\n",
+    "        match = re.search(r\"(\\{.*\\})\", text, re.DOTALL)\n",
+    "        if not match:\n",
+    "            raise ValueError(\"No JSON object found in text.\")\n",
+    "        json_str = match.group(1)\n",
+    "        try:\n",
+    "            result = json.loads(json_str)\n",
+    "        except json.JSONDecodeError as e:\n",
+    "            raise ValueError(f\"Error decoding JSON: {json_str}\") from e\n",
+    "        # Clean the keys of the parsed JSON\n",
+    "        result = clean_keys(result)\n",
+    "        # Validate required keys\n",
+    "        if \"destination\" not in result:\n",
+    "            raise ValueError(\"Output JSON is missing the 'destination' key.\")\n",
+    "        if \"next_inputs\" not in result:\n",
+    "            raise ValueError(\"Output JSON is missing the 'next_inputs' key.\")\n",
+    "        if not isinstance(result[\"next_inputs\"], dict):\n",
+    "            raise ValueError(\"The 'next_inputs' key must be a dictionary.\")\n",
+    "        if \"question\" not in result[\"next_inputs\"]:\n",
+    "            raise ValueError(\"The 'next_inputs' dictionary must include the 'question' key.\")\n",
+    "        return result\n",
+    "\n",
+    "    @property\n",
+    "    def _type(self) -> str:\n",
+    "        return \"custom_router_output_parser\"\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.chains.router.llm_router import LLMRouterChain\n",
+    "from langchain.prompts import PromptTemplate\n",
+    "\n",
+    "router_output_parser = CustomRouterOutputParser()\n",
+    "\n",
+    "router_prompt = PromptTemplate(\n",
+    "    input_variables=[\"question\"],\n",
+    "    template=(\n",
+    "        \"You are a routing assistant. Given the following question, decide which destination chain to use and return a valid JSON object with exactly two keys:\\n\"\n",
+    "        \"1. destination: either \\\"house_price\\\" (if the question is about house pricing) or \\\"other_task\\\" for all other cases.\\n\"\n",
+    "        \"2. next_inputs: a dictionary that includes the key \\\"question\\\" mapping to the original question text.\\n\"\n",
+    "        \"For example, if the question is about house pricing, return:\\n\"\n",
+    "        \"{{\\\"destination\\\": \\\"house_price\\\", \\\"next_inputs\\\": {{\\\"question\\\": \\\"What is the price of the house?\\\"}}}}\\n\"\n",
+    "        \"Now, answer for the question: {question}\"\n",
+    "    ),\n",
+    "    output_parser=router_output_parser  # your custom parser\n",
+    ")\n",
+    "\n",
+    "router_chain = LLMRouterChain.from_llm(\n",
+    "    llm=llm,  # your routing LLM instance\n",
+    "    prompt=router_prompt,\n",
+    "    destination_chains={\n",
+    "        \"house_price\": house_price_chain,\n",
+    "        \"other_task\": other_task_chain,\n",
+    "    }\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'router_chain' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[19]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Use the router chain on your input\u001b[39;00m\n\u001b[32m      2\u001b[39m input_text = \u001b[33m\"\u001b[39m\u001b[33mWhat is the price of the house?\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m result = \u001b[43mrouter_chain\u001b[49m.run(input_text)\n\u001b[32m      4\u001b[39m \u001b[38;5;28mprint\u001b[39m(result)\n",
-      "\u001b[31mNameError\u001b[39m: name 'router_chain' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'question': 'please tell me about the price of the your house?', 'destination': 'house_price', 'next_inputs': {'question': 'please tell me about the price of your house?'}}\n"
      ]
     }
    ],
    "source": [
-    "# Use the router chain on your input\n",
-    "input_text = \"What is the price of the house?\"\n",
-    "result = router_chain.run(input_text)\n",
+    "input_text = \"please tell me about the price of the your house?\"\n",
+    "result = router_chain({\"question\": input_text})\n",
     "print(result)\n"
    ]
   },
