consider loan_calculation as destination_chain

--- a/math_langchain.ipynb
+++ b/math_langchain.ipynb
@@ -169,6 +169,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import re\n",
+    "from langchain.schema import BaseOutputParser\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
@@ -360,13 +371,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "import re\n",
-    "from langchain.schema import BaseOutputParser\n",
     "\n",
     "def clean_keys(d: dict) -> dict:\n",
     "    new_d = {}\n",
@@ -461,6 +469,219 @@
     "input_text = \"please tell me about the price of the your house?\"\n",
     "result = router_chain({\"question\": input_text})\n",
     "print(result)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## New solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import re\n",
+    "from langchain.schema import BaseOutputParser\n",
+    "from langchain.chains.router.llm_router import LLMRouterChain\n",
+    "from langchain.chains import LLMChain\n",
+    "from langchain.prompts import PromptTemplate\n",
+    "# from langchain.llms import OpenAI  # Replace with your actual LLM (ollama, phi4, etc.)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# -------------------------------\n",
+    "# Custom Output Parser Definition\n",
+    "# -------------------------------\n",
+    "def clean_keys(d: dict) -> dict:\n",
+    "    \"\"\"Recursively clean dictionary keys by stripping whitespace and extra quotes.\"\"\"\n",
+    "    new_d = {}\n",
+    "    for key, value in d.items():\n",
+    "        new_key = key.strip()\n",
+    "        if new_key.startswith('\"') and new_key.endswith('\"'):\n",
+    "            new_key = new_key[1:-1]\n",
+    "        if isinstance(value, dict):\n",
+    "            new_d[new_key] = clean_keys(value)\n",
+    "        else:\n",
+    "            new_d[new_key] = value\n",
+    "    return new_d\n",
+    "\n",
+    "class CustomRouterOutputParser(BaseOutputParser):\n",
+    "    def parse(self, text: str) -> dict:\n",
+    "        # Extract the first JSON object from the text\n",
+    "        match = re.search(r\"(\\{.*\\})\", text, re.DOTALL)\n",
+    "        if not match:\n",
+    "            raise ValueError(\"No JSON object found in text.\")\n",
+    "        json_str = match.group(1)\n",
+    "        try:\n",
+    "            result = json.loads(json_str)\n",
+    "        except json.JSONDecodeError as e:\n",
+    "            raise ValueError(f\"Error decoding JSON: {json_str}\") from e\n",
+    "        # Clean the keys to remove any extra quotes\n",
+    "        result = clean_keys(result)\n",
+    "        # Validate required keys\n",
+    "        if \"destination\" not in result:\n",
+    "            raise ValueError(\"Output JSON is missing the 'destination' key.\")\n",
+    "        if \"next_inputs\" not in result:\n",
+    "            raise ValueError(\"Output JSON is missing the 'next_inputs' key.\")\n",
+    "        if not isinstance(result[\"next_inputs\"], dict):\n",
+    "            raise ValueError(\"The 'next_inputs' key must be a dictionary.\")\n",
+    "        if \"question\" not in result[\"next_inputs\"]:\n",
+    "            raise ValueError(\"The 'next_inputs' dictionary must include the 'question' key.\")\n",
+    "        return result\n",
+    "\n",
+    "    @property\n",
+    "    def _type(self) -> str:\n",
+    "        return \"custom_router_output_parser\"\n",
+    "\n",
+    "# Instantiate the custom output parser\n",
+    "router_output_parser = CustomRouterOutputParser()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# -------------------------------------------\n",
+    "# Update: Define the Router Prompt (with escaped braces)\n",
+    "# -------------------------------------------\n",
+    "# CHANGED: The prompt now includes the \"loan_calculation\" destination.\n",
+    "router_prompt = PromptTemplate(\n",
+    "    input_variables=[\"question\"],\n",
+    "    template=(\n",
+    "        \"You are a routing assistant. Given the following question, decide which formula chain to use and return a valid JSON object with exactly two keys:\\n\"\n",
+    "        \"1. destination: one of 'formula_1', 'formula_2', or 'loan_calculation'.\\n\"\n",
+    "        \"   - Use 'formula_1' for questions about house pricing.\\n\"\n",
+    "        \"   - Use 'loan_calculation' for questions about calculating remaining money for loans.\\n\"\n",
+    "        \"   - Use 'formula_2' for all other tasks.\\n\"\n",
+    "        \"2. next_inputs: a dictionary that includes the key 'question' mapping to the original question text.\\n\"\n",
+    "        \"For example, if the question is 'What is the price of the house?', return:\\n\"\n",
+    "        \"{{\\\"destination\\\": \\\"formula_1\\\", \\\"next_inputs\\\": {{\\\"question\\\": \\\"What is the price of the house?\\\"}}}}\\n\"\n",
+    "        \"Now, answer for the question: {question}\"\n",
+    "    ),\n",
+    "    output_parser=router_output_parser\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# --------------------------------------------------------\n",
+    "# Create Dummy Formula Chains for Each Task/Formula\n",
+    "# --------------------------------------------------------\n",
+    "# llm = OpenAI(temperature=0)  # Replace with your preferred LLM instance\n",
+    "\n",
+    "# Formula 1: House Pricing (unchanged)\n",
+    "formula_1_prompt = PromptTemplate(\n",
+    "    input_variables=[\"question\"],\n",
+    "    template=\"Formula 1 (House Pricing): Given the question: {question}, compute the house price using the relevant pricing formula.\"\n",
+    ")\n",
+    "formula_1_chain = LLMChain(llm=llm, prompt=formula_1_prompt, verbose=True)\n",
+    "\n",
+    "# Formula 2: Generic Task (unchanged)\n",
+    "formula_2_prompt = PromptTemplate(\n",
+    "    input_variables=[\"question\"],\n",
+    "    template=\"Formula 2: Given the question: {question}, compute the answer using a generic approach.\"\n",
+    ")\n",
+    "formula_2_chain = LLMChain(llm=llm, prompt=formula_2_prompt, verbose=True)\n",
+    "\n",
+    "# NEW: Loan Calculation Chain\n",
+    "# This chain is used when the question is about calculating how much money to pay for loans.\n",
+    "loan_calculation_prompt = PromptTemplate(\n",
+    "    input_variables=[\"question\"],\n",
+    "    template=(\n",
+    "        \"Loan Calculation Expert: For the question: {question}\\n\"\n",
+    "        \"Use the formula: total_amount - (number_of_paid_loans * amount_per_loan)\\n\"\n",
+    "        \"to calculate the amount of money required to pay all the loans. \\n\"\n",
+    "        \"Here, total_amount is the total money received by the user, \"\n",
+    "        \"number_of_paid_loans is the number of loans paid, and \"\n",
+    "        \"amount_per_loan is the cost of each paid loan. \\n\"\n",
+    "        \"Explain the formula and show an example calculation.\"\n",
+    "    )\n",
+    ")\n",
+    "loan_calculation_chain = LLMChain(llm=llm, prompt=loan_calculation_prompt, verbose=True)\n",
+    "\n",
+    "# ---------------------------------------------------------------\n",
+    "# Update: Create the Router Chain with the Three Destination Chains\n",
+    "# ---------------------------------------------------------------\n",
+    "# CHANGED: The destination_chains dictionary now includes the key \"loan_calculation\"\n",
+    "router_chain = LLMRouterChain.from_llm(\n",
+    "    llm=llm,\n",
+    "    prompt=router_prompt,\n",
+    "    destination_chains={\n",
+    "        \"formula_1\": formula_1_chain,\n",
+    "        \"formula_2\": formula_2_chain,\n",
+    "        \"loan_calculation\": loan_calculation_chain,  # NEW destination\n",
+    "    }\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Router output: {'question': 'How much money should I pay to pay all my loans to the bank?', 'destination': 'loan_calculation', 'next_inputs': {'question': 'How much money should I pay to pay all my loans to the bank?'}}\n",
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new LLMChain chain...\u001b[0m\n",
+      "Prompt after formatting:\n",
+      "\u001b[32;1m\u001b[1;3mLoan Calculation Expert: For the question: How much money should I pay to pay all my loans to the bank?\n",
+      "Use the formula: total_amount - (number_of_paid_loans * amount_per_loan)\n",
+      "to calculate the amount of money required to pay all the loans. \n",
+      "Here, total_amount is the total money received by the user, number_of_paid_loans is the number of loans paid, and amount_per_loan is the cost of each paid loan. \n",
+      "Explain the formula and show an example calculation.\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "Final result from 'loan_calculation': {'question': 'How much money should I pay to pay all my loans to the bank?', 'text': \"### Explanation of the Formula\\n\\nThe formula used to calculate how much money you should pay to settle all your loans is:\\n\\n\\\\[ \\\\text{Amount Required} = \\\\text{total\\\\_amount} - (\\\\text{number\\\\_of\\\\_paid\\\\_loans} \\\\times \\\\text{amount\\\\_per\\\\_loan}) \\\\]\\n\\nHere's a breakdown of each component in the formula:\\n\\n- **Total Amount**: This represents the total amount of money you currently have or plan to use towards paying off your loans.\\n\\n- **Number of Paid Loans**: This is the number of loans that you have already paid off.\\n\\n- **Amount Per Loan**: This refers to the cost required to pay off each individual loan. \\n\\nThe formula essentially calculates how much more money you need by subtracting the total amount you've already spent on paying off some loans (calculated as `number_of_paid_loans * amount_per_loan`) from your total available funds (`total_amount`).\\n\\n### Example Calculation\\n\\nLet's consider an example:\\n\\n- **Total Amount**: $50,000 (the total money you have)\\n- **Number of Paid Loans**: 5 (you've already paid off 5 loans)\\n- **Amount Per Loan**: $4,000 (each loan costs $4,000)\\n\\nUsing the formula:\\n\\n\\\\[ \\\\text{Amount Required} = 50,000 - (5 \\\\times 4,000) \\\\]\\n\\nFirst, calculate the total cost of the paid loans:\\n\\n\\\\[ 5 \\\\times 4,000 = 20,000 \\\\]\\n\\nNow, subtract this from your total amount:\\n\\n\\\\[ 50,000 - 20,000 = 30,000 \\\\]\\n\\nSo, you have $30,000 remaining to pay off any additional loans. If there are no more outstanding loans or if this amount is sufficient for future payments, that's the money left after settling the paid loans.\\n\\nIf you had more loans to settle with specific costs, you would need to consider those in your budgeting plan using this formula as a starting point.\"}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create the mapping for destination chains (separate from the router chain)\n",
+    "destination_chains = {\n",
+    "    \"formula_1\": formula_1_chain,\n",
+    "    \"formula_2\": formula_2_chain,\n",
+    "    \"loan_calculation\": loan_calculation_chain,\n",
+    "}\n",
+    "\n",
+    "# -------------------------------------------\n",
+    "# Example Usage: A Loan Calculation Question\n",
+    "# -------------------------------------------\n",
+    "input_text = \"How much money should I pay to pay all my loans to the bank?\"\n",
+    "# input_text = \"چه مقدار پول باید بدم به بانک تا وام من تسویه بشه؟\"\n",
+    "# First, use the router chain to determine which formula chain to use.\n",
+    "router_result = router_chain({\"question\": input_text})\n",
+    "print(\"Router output:\", router_result)\n",
+    "\n",
+    "# Extract destination and next_inputs from the router output.\n",
+    "destination = router_result[\"destination\"]\n",
+    "next_inputs = router_result[\"next_inputs\"]\n",
+    "\n",
+    "# Use our separate mapping to call the selected destination chain.\n",
+    "if destination in destination_chains:\n",
+    "    final_result = destination_chains[destination](next_inputs)\n",
+    "    print(f\"Final result from '{destination}':\", final_result)\n",
+    "else:\n",
+    "    print(\"Destination not found:\", destination)\n"
    ]
   },
   {
