--- a/math_langchain.ipynb
+++ b/math_langchain.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.core.display import HTML"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
@@ -157,171 +166,38 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from langchain.chains import LLMChain\n",
-    "from langchain.chains.router import LLMRouterChain\n",
-    "from langchain.prompts import PromptTemplate"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "import re\n",
-    "from langchain.schema import BaseOutputParser\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Define prompt templates for each formula chain\n",
-    "house_price_prompt = PromptTemplate(\n",
-    "    input_variables=[\"question\"],\n",
-    "    template=\"This question asks about a house price. Apply Formula1: {question}\"\n",
-    ")\n",
-    "other_task_prompt = PromptTemplate(\n",
-    "    input_variables=[\"question\"],\n",
-    "    template=\"This question seems to be about another task. Apply Formula2: {question}\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_161669/207616203.py:2: LangChainDeprecationWarning: The class `LLMChain` was deprecated in LangChain 0.1.17 and will be removed in 1.0. Use :meth:`~RunnableSequence, e.g., `prompt | llm`` instead.\n",
-      "  house_price_chain = LLMChain(llm=llm, prompt=house_price_prompt)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Create LLM chains for each formula\n",
-    "house_price_chain = LLMChain(llm=llm, prompt=house_price_prompt)\n",
-    "other_task_chain = LLMChain(llm=llm, prompt=other_task_prompt)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "def clean_keys(d: dict) -> dict:\n",
-    "    new_d = {}\n",
-    "    for key, value in d.items():\n",
-    "        # Strip whitespace and then remove surrounding quotes if present\n",
-    "        new_key = key.strip()\n",
-    "        if new_key.startswith('\"') and new_key.endswith('\"'):\n",
-    "            new_key = new_key[1:-1]\n",
-    "        if isinstance(value, dict):\n",
-    "            new_d[new_key] = clean_keys(value)\n",
-    "        else:\n",
-    "            new_d[new_key] = value\n",
-    "    return new_d\n",
-    "\n",
-    "class CustomRouterOutputParser(BaseOutputParser):\n",
-    "    def parse(self, text: str) -> dict:\n",
-    "        # Extract the first JSON object from the text using regex\n",
-    "        match = re.search(r\"(\\{.*\\})\", text, re.DOTALL)\n",
-    "        if not match:\n",
-    "            raise ValueError(\"No JSON object found in text.\")\n",
-    "        json_str = match.group(1)\n",
-    "        try:\n",
-    "            result = json.loads(json_str)\n",
-    "        except json.JSONDecodeError as e:\n",
-    "            raise ValueError(f\"Error decoding JSON: {json_str}\") from e\n",
-    "        # Clean the keys of the parsed JSON\n",
-    "        result = clean_keys(result)\n",
-    "        # Validate required keys\n",
-    "        if \"destination\" not in result:\n",
-    "            raise ValueError(\"Output JSON is missing the 'destination' key.\")\n",
-    "        if \"next_inputs\" not in result:\n",
-    "            raise ValueError(\"Output JSON is missing the 'next_inputs' key.\")\n",
-    "        if not isinstance(result[\"next_inputs\"], dict):\n",
-    "            raise ValueError(\"The 'next_inputs' key must be a dictionary.\")\n",
-    "        if \"question\" not in result[\"next_inputs\"]:\n",
-    "            raise ValueError(\"The 'next_inputs' dictionary must include the 'question' key.\")\n",
-    "        return result\n",
-    "\n",
-    "    @property\n",
-    "    def _type(self) -> str:\n",
-    "        return \"custom_router_output_parser\"\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from langchain.chains.router.llm_router import LLMRouterChain\n",
-    "from langchain.prompts import PromptTemplate\n",
-    "\n",
-    "router_output_parser = CustomRouterOutputParser()\n",
-    "\n",
-    "router_prompt = PromptTemplate(\n",
-    "    input_variables=[\"question\"],\n",
-    "    template=(\n",
-    "        \"You are a routing assistant. Given the following question, decide which destination chain to use and return a valid JSON object with exactly two keys:\\n\"\n",
-    "        \"1. destination: either \\\"house_price\\\" (if the question is about house pricing) or \\\"other_task\\\" for all other cases.\\n\"\n",
-    "        \"2. next_inputs: a dictionary that includes the key \\\"question\\\" mapping to the original question text.\\n\"\n",
-    "        \"For example, if the question is about house pricing, return:\\n\"\n",
-    "        \"{{\\\"destination\\\": \\\"house_price\\\", \\\"next_inputs\\\": {{\\\"question\\\": \\\"What is the price of the house?\\\"}}}}\\n\"\n",
-    "        \"Now, answer for the question: {question}\"\n",
-    "    ),\n",
-    "    output_parser=router_output_parser  # your custom parser\n",
-    ")\n",
-    "\n",
-    "router_chain = LLMRouterChain.from_llm(\n",
-    "    llm=llm,  # your routing LLM instance\n",
-    "    prompt=router_prompt,\n",
-    "    destination_chains={\n",
-    "        \"house_price\": house_price_chain,\n",
-    "        \"other_task\": other_task_chain,\n",
-    "    }\n",
-    ")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'question': 'please tell me about the price of the your house?', 'destination': 'house_price', 'next_inputs': {'question': 'please tell me about the price of your house?'}}\n"
-     ]
-    }
-   ],
-   "source": [
-    "input_text = \"please tell me about the price of the your house?\"\n",
-    "result = router_chain({\"question\": input_text})\n",
-    "print(result)\n"
+    "## Router"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## New solution"
+    "<h2>Using Router is a common and effective pattern in LangChain for handling multi-step workflows.</h2> \n",
+    "\n",
+    "<p>Using a router chain that outputs a structured dictionary—typically with keys like \"destination\" (to select the appropriate chain) and \"next_inputs\" (to pass along additional context or parameters)—helps separate the decision logic from the execution logic.</p>\n",
+    "\n",
+    "\n",
+    "\n",
+    "<h3>Here’s why this approach is beneficial:</h3>\n",
+    "<ul>\n",
+    "    <li><strong>Modularity: </strong> It decouples the routing logic from the individual chain implementations, allowing each chain to focus on its specific task.</li>\n",
+    "    <li><strong>Scalability: </strong> You can easily add or modify destination chains without changing the overall structure.</li>\n",
+    "    <li><strong>Clarity: </strong> The structured output makes it explicit which chain is being selected and what inputs will be passed along, which is useful for debugging and maintenance.</li>\n",
+    "</ul>\n",
+    "\n",
+    "\n",
+    "<p>This pattern is often recommended in LangChain examples and documentation for multi-step reasoning tasks.</p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Define LLM"
    ]
   },
   {
@@ -346,6 +222,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Input Libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -358,6 +241,13 @@
     "from langchain.chains import LLMChain\n",
     "from langchain.prompts import PromptTemplate\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Define Output Parser for Router_Prompt"
    ]
   },
   {
@@ -414,6 +304,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Routing Logic and Formula Chain"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -437,6 +334,13 @@
     "    ),\n",
     "    output_parser=router_output_parser\n",
     ")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Formula Chain --> Core of Calculations"
    ]
   },
   {
@@ -499,6 +403,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create Router Chain According to Router_Prompt and Destination_Chain"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -517,6 +428,13 @@
     "    prompt=router_prompt,\n",
     "    destination_chains=destination_chains\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Examples"
    ]
   },
   {
