try to use python code as a calculator  in test code

--- a/test.ipynb
+++ b/test.ipynb
@@ -199,6 +199,200 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Change the prompt to solve the above error in mathchain"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_5349/1055621017.py:34: LangChainDeprecationWarning: This class is deprecated and will be removed in langchain 1.0. See API reference for replacement: https://api.python.langchain.com/en/latest/chains/langchain.chains.llm_math.base.LLMMathChain.html\n",
+      "  math_chain = LLMMathChain(llm=llm, prompt=custom_prompt, verbose = True)\n",
+      "/home/mahdi/Math_LangChain/.venv/lib/python3.12/site-packages/langchain/chains/llm_math/base.py:175: UserWarning: Directly instantiating an LLMMathChain with an llm is deprecated. Please instantiate with llm_chain argument or using the from_llm class method.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new LLMMathChain chain...\u001b[0m\n",
+      "What is 551121 divided by 82?\u001b[32;1m\u001b[1;3mAnswer: 6727.12\u001b[0m\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "{'question': 'What is 551121 divided by 82?', 'answer': 'Answer: 6727.12'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain.chains import LLMMathChain\n",
+    "from langchain.llms import Ollama\n",
+    "from langchain.prompts import PromptTemplate\n",
+    "\n",
+    "# Create a custom prompt template to enforce the expected output.\n",
+    "custom_prompt = PromptTemplate(\n",
+    "    input_variables=[\"question\"],\n",
+    "    template=(\n",
+    "        \"You are a expert math solver. Solve the problem below and output only the final answer in the exact format:\\n\"\n",
+    "        \"Answer: <result>\\n\\n\"\n",
+    "        \"Do not include any explanation, commentary, or extra text.\\n\\n\"\n",
+    "        \"Round the result with 2. For example,if the result is 5.6666666, make the result 5.66.\\n\\n\"\n",
+    "        \"Problem: {question}\"\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "\n",
+    "# custom_prompt = PromptTemplate(\n",
+    "#     input_variables=[\"question\"],\n",
+    "#     template=(\n",
+    "#         \"You are an expert math solver. Solve the following problem using exact arithmetic. \"\n",
+    "#         \"Only output the final answer in the exact format 'Answer: <result>' with no additional text.\\n\\n\"\n",
+    "#         \"Problem: {question}\"\n",
+    "#     )\n",
+    "# )\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Use your local Ollama model.\n",
+    "llm = Ollama(model=\"phi4:latest\", base_url=\"http://127.0.0.1:11434\", temperature = 0)\n",
+    "\n",
+    "# Instantiate the math chain with the custom prompt.\n",
+    "math_chain = LLMMathChain(llm=llm, prompt=custom_prompt, verbose = True)\n",
+    "\n",
+    "# Run the chain with the math problem.\n",
+    "# result = math_chain.invoke(\"What is 551368 divided by 82?\")\n",
+    "result = math_chain.invoke(\"What is 551121 divided by 82?\")\n",
+    "# result = math_chain.invoke(\"What is (12 plus 18 minus 10) devide by 3?\")\n",
+    "print(result)  # Expected output: Answer: 6724\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'question': 'What is 551121 divided by 82?', 'answer': 'Answer: 6727.12'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "# Assume result is the string returned by math_chain.run(...)\n",
+    "# Example: result = \"Answer: 6724.731707317073\"\n",
+    "if \"Answer:\" in result:\n",
+    "    # Extract the numeric part.\n",
+    "    numeric_part = result.split(\"Answer:\")[-1].strip()\n",
+    "    try:\n",
+    "        # Convert to float and check if it's nearly an integer.\n",
+    "        value = float(numeric_part)\n",
+    "        if abs(value - round(value)) < 1e-6:\n",
+    "            value = round(value)\n",
+    "        # Format the final answer.\n",
+    "        final_answer = f\"Answer: {value}\"\n",
+    "    except Exception as e:\n",
+    "        final_answer = result\n",
+    "else:\n",
+    "    final_answer = result\n",
+    "\n",
+    "print(final_answer)  # Expected output: Answer: 6724\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Answer: 6724\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Direct computation in Python:\n",
+    "expression = \"551368 / 82\"\n",
+    "# Using Python's exact division (or integer division if appropriate):\n",
+    "result_value = eval(expression)\n",
+    "# If you expect an integer result:\n",
+    "if result_value == int(result_value):\n",
+    "    result_value = int(result_value)\n",
+    "print(f\"Answer: {result_value}\")  # Expected output: Answer: 6724\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Because the result is not accurate, I will try to use a python code to calculate mathematics part."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Expression: 2 * 82 - 12\n",
+      "Answer: 152\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "def prompt_to_expression(prompt):\n",
+    "    # Convert prompt to lowercase to standardize the mapping.\n",
+    "    text = prompt.lower()\n",
+    "    # Map common arithmetic phrases to their operators.\n",
+    "    text = text.replace(\"divided by\", \"/\")\n",
+    "    text = text.replace(\"multiplied by\", \"*\")\n",
+    "    text = text.replace(\"plus\", \"+\")\n",
+    "    text = text.replace(\"minus\", \"-\")\n",
+    "    \n",
+    "    # Remove unnecessary words and punctuation.\n",
+    "    text = re.sub(r\"what is\", \"\", text)\n",
+    "    text = re.sub(r\"\\?\", \"\", text)\n",
+    "    \n",
+    "    # Clean up extra spaces.\n",
+    "    return text.strip()\n",
+    "\n",
+    "# Example prompt:\n",
+    "# prompt = \"What is 551368 divided by 82?\"\n",
+    "prompt = \"What is 2 multiplied by 82 minus 12?\"\n",
+    "expression = prompt_to_expression(prompt)\n",
+    "print(\"Expression:\", expression)  # Expected output: \"551368 / 82\"\n",
+    "\n",
+    "# Now evaluate the expression.\n",
+    "result_value = eval(expression)\n",
+    "\n",
+    "# If the result is an integer, cast it accordingly.\n",
+    "if result_value == int(result_value):\n",
+    "    result_value = int(result_value)\n",
+    "\n",
+    "print(f\"Answer: {result_value}\")  # Expected output: Answer: 6724\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
