try different ways to understand values and calculate them

--- a/test.ipynb
+++ b/test.ipynb
@@ -345,15 +345,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Expression: 2 * 82 - 12\n",
-      "Answer: 152\n"
+      "Expression: 2 * 82 - 12.5 + 2\n",
+      "Answer: 153.5\n"
      ]
     }
    ],
@@ -378,7 +378,9 @@
     "\n",
     "# Example prompt:\n",
     "# prompt = \"What is 551368 divided by 82?\"\n",
-    "prompt = \"What is 2 multiplied by 82 minus 12?\"\n",
+    "# prompt = \"What is 2 multiplied by 82 minus 12.5?\"\n",
+    "prompt = \"What is 2 multiplied by 82 minus 12.5 plus 2?\"\n",
+    "# prompt = \"I want to 2 multiplied by 82. How much is it?\"\n",
     "expression = prompt_to_expression(prompt)\n",
     "print(\"Expression:\", expression)  # Expected output: \"551368 / 82\"\n",
     "\n",
@@ -390,6 +392,234 @@
     "    result_value = int(result_value)\n",
     "\n",
     "print(f\"Answer: {result_value}\")  # Expected output: Answer: 6724\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "\n",
+    "def prompt_to_expression(prompt: str) -> str:\n",
+    "    \"\"\"\n",
+    "    Convert a natural language math prompt into an arithmetic expression.\n",
+    "    \n",
+    "    This function uses simple heuristics:\n",
+    "      - It maps key phrases to arithmetic operators.\n",
+    "      - It extracts numbers from the prompt.\n",
+    "      - It then constructs an expression using the first two numbers found.\n",
+    "    \n",
+    "    Args:\n",
+    "        prompt (str): The natural language math prompt.\n",
+    "    \n",
+    "    Returns:\n",
+    "        str: A string representing the arithmetic expression.\n",
+    "    \n",
+    "    Raises:\n",
+    "        ValueError: If no valid operation or not enough numbers are found.\n",
+    "    \"\"\"\n",
+    "    # Convert prompt to lowercase for uniform processing.\n",
+    "    text = prompt.lower()\n",
+    "\n",
+    "    # Mapping of keywords/phrases to arithmetic operators.\n",
+    "    operations = {\n",
+    "        'divided by': '/',\n",
+    "        'divide': '/',\n",
+    "        'multiplied by': '*',\n",
+    "        'multiply': '*',\n",
+    "        'times': '*',\n",
+    "        'plus': '+',\n",
+    "        'added to': '+',\n",
+    "        'minus': '-',\n",
+    "        'subtracted by': '-',\n",
+    "        'subtract': '-',\n",
+    "        'power' : '^'\n",
+    "    }\n",
+    "    \n",
+    "    # Identify the operator by looking for any of the defined phrases.\n",
+    "    operator = None\n",
+    "    for phrase, op in operations.items():\n",
+    "        if phrase in text:\n",
+    "            operator = op\n",
+    "            break\n",
+    "\n",
+    "    if operator is None:\n",
+    "        raise ValueError(\"No valid arithmetic operation found in the prompt.\")\n",
+    "\n",
+    "    # Extract numbers (both integers and decimals) from the prompt.\n",
+    "    numbers = re.findall(r'\\d+(?:\\.\\d+)?', text)\n",
+    "    if len(numbers) < 2:\n",
+    "        raise ValueError(\"Not enough numbers found in the prompt to form an expression.\")\n",
+    "\n",
+    "    # Construct the arithmetic expression using the first two numbers.\n",
+    "    expression = f\"{numbers[0]} {operator} {numbers[1]}\"\n",
+    "    return expression\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prompt: What is 551368 divided by 82?\n",
+      "Extracted Expression: 551368 / 82\n",
+      "Answer: 6724\n",
+      "\n",
+      "Prompt: I want to multiply 2 and 82\n",
+      "Extracted Expression: 2 * 82\n",
+      "Answer: 164\n",
+      "\n",
+      "Prompt: Please add 10.5 plus 2.3\n",
+      "Extracted Expression: 10.5 + 2.3\n",
+      "Answer: 12.8\n",
+      "\n",
+      "Prompt: Subtract 20 from 100\n",
+      "Extracted Expression: 20 - 100\n",
+      "Answer: -80\n",
+      "\n",
+      "Prompt: I want to multiply 2 and 12 minus 10\n",
+      "Extracted Expression: 2 * 12\n",
+      "Answer: 24\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example usage:\n",
+    "prompts = [\n",
+    "    \"What is 551368 divided by 82?\",\n",
+    "    \"I want to multiply 2 and 82\",\n",
+    "    \"Please add 10.5 plus 2.3\",\n",
+    "    \"Subtract 20 from 100\",\n",
+    "    \"I want to multiply 2 and 12 minus 10 power 2\"\n",
+    "]\n",
+    "\n",
+    "for prompt in prompts:\n",
+    "    try:\n",
+    "        expression = prompt_to_expression(prompt)\n",
+    "        result_value = eval(expression)\n",
+    "        # If the result is a float that is effectively an integer, cast it.\n",
+    "        if result_value == int(result_value):\n",
+    "            result_value = int(result_value)\n",
+    "        print(f\"Prompt: {prompt}\")\n",
+    "        print(f\"Extracted Expression: {expression}\")\n",
+    "        print(f\"Answer: {result_value}\\n\")\n",
+    "    except ValueError as e:\n",
+    "        print(f\"Error processing prompt: {prompt}\\n{e}\\n\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### above solution is failed to express math equation with more that two parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "\n",
+    "def parse_math_prompt(prompt: str) -> str:\n",
+    "    \"\"\"\n",
+    "    Convert a natural language math prompt into a valid arithmetic expression.\n",
+    "    \n",
+    "    This function applies a series of regex substitutions to handle common\n",
+    "    phrases for operations (multiplication, division, addition, subtraction, power)\n",
+    "    and then cleans up extra words.\n",
+    "    \n",
+    "    For example:\n",
+    "      \"I want to multiply 2 and 12 minus 10 power 2\"\n",
+    "    becomes:\n",
+    "      \"2 * 12 - 10 ** 2\"\n",
+    "    \n",
+    "    Args:\n",
+    "        prompt (str): The natural language prompt.\n",
+    "    \n",
+    "    Returns:\n",
+    "        str: A string that is a valid arithmetic expression.\n",
+    "    \"\"\"\n",
+    "    # Standardize the input to lowercase.\n",
+    "    text = prompt.lower()\n",
+    "    \n",
+    "    # Replace exponentiation phrases first.\n",
+    "    # Handles phrases like \"10 power 2\" or \"10 to the power of 2\"\n",
+    "    text = re.sub(r'(\\d+(?:\\.\\d+)?)\\s+(?:power|to the power of)\\s+(\\d+(?:\\.\\d+)?)', r'\\1 ** \\2', text)\n",
+    "    \n",
+    "    # Replace multiplication phrases.\n",
+    "    # e.g., \"multiply 2 and 12\" or \"multiplied by\"\n",
+    "    text = re.sub(r'multiply\\s+(\\d+(?:\\.\\d+)?)(?:\\s+and\\s+|\\s+)(\\d+(?:\\.\\d+)?)', r'\\1 * \\2', text)\n",
+    "    text = re.sub(r'multiplied\\s+by', '*', text)\n",
+    "    \n",
+    "    # Replace division phrases.\n",
+    "    text = re.sub(r'(\\d+(?:\\.\\d+)?)\\s+divided\\s+by\\s+(\\d+(?:\\.\\d+)?)', r'\\1 / \\2', text)\n",
+    "    text = re.sub(r'divide\\s+(\\d+(?:\\.\\d+)?)(?:\\s+by\\s+)(\\d+(?:\\.\\d+)?)', r'\\1 / \\2', text)\n",
+    "    \n",
+    "    # Replace addition phrases.\n",
+    "    text = re.sub(r'add\\s+(\\d+(?:\\.\\d+)?)(?:\\s+and\\s+|\\s+)(\\d+(?:\\.\\d+)?)', r'\\1 + \\2', text)\n",
+    "    text = re.sub(r'plus', '+', text)\n",
+    "    \n",
+    "    # Replace subtraction phrases.\n",
+    "    # e.g., \"12 minus 10\" and also handle \"subtract 10 from 12\" (which becomes \"12 - 10\")\n",
+    "    text = re.sub(r'(\\d+(?:\\.\\d+)?)\\s+minus\\s+(\\d+(?:\\.\\d+)?)', r'\\1 - \\2', text)\n",
+    "    text = re.sub(r'subtract\\s+(\\d+(?:\\.\\d+)?)(?:\\s+from\\s+)(\\d+(?:\\.\\d+)?)', r'\\2 - \\1', text)\n",
+    "    \n",
+    "    # Remove common filler words.\n",
+    "    fillers = [\"i want to\", \"what is\", \"calculate\", \"please\"]\n",
+    "    for filler in fillers:\n",
+    "        text = text.replace(filler, \"\")\n",
+    "    \n",
+    "    # Remove leftover instances of \"and\" (which might be used as a conjunction).\n",
+    "    text = text.replace(\"and\", \"\")\n",
+    "    \n",
+    "    # Clean up extra whitespace.\n",
+    "    expression = \" \".join(text.split())\n",
+    "    \n",
+    "    return expression\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracted Expression: 2 * 5 ** 2\n",
+      "Answer: 50\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example prompt with more than two operations:\n",
+    "prompt = \"I want to multiply 2 and 12 minus 10 power 2\"\n",
+    "prompt = \"I want to multiply 2 and 5 power 2\"\n",
+    "expression = parse_math_prompt(prompt)\n",
+    "print(\"Extracted Expression:\", expression)  # Expected: \"2 * 12 - 10 ** 2\"\n",
+    "\n",
+    "# Evaluate the expression using Python's eval.\n",
+    "result_value = eval(expression)\n",
+    "\n",
+    "# Round the result to 2 decimal places if it's not an integer.\n",
+    "if result_value != int(result_value):\n",
+    "    result_value = round(result_value, 2)\n",
+    "else:\n",
+    "    result_value = int(result_value)\n",
+    "\n",
+    "print(f\"Answer: {result_value}\")  # For \"2 * 12 - 10 ** 2\", expected output: Answer: -76\n"
    ]
   },
   {
